fix(CSS): gap and height of images

--- a/components/About/About.module.css
+++ b/components/About/About.module.css
@@ -106,13 +106,29 @@
   z-index: -1;
 }
 
+@media (max-width: 1024px) {
+  .aboutcontainer {
+    gap: 2rem;
+  }
+
+  .aboutimage1 {
+    width: 250px;
+  }
+
+  .aboutimage2 {
+    width: 250px;
+    left: 80px;
+    top: -10px;
+  }
+}
+
 @media (max-width: 768px) {
   .aboutcontainer {
     display: block;
   }
   .aboutimages {
     margin-left: 0px;
-    margin-top: 0; 
+    margin-top: 0;
   }
   .aboutimage1 {
     width: 250px;
@@ -133,29 +149,21 @@
     margin-top: 38px;
   }
 
-  .aboutcontent h1 {  
-font-size: 12.58px;
-font-weight: 600;
-line-height: 15.09px; 
-
+  .aboutcontent h1 {
+    font-size: 12.58px;
+    font-weight: 600;
+    line-height: 15.09px;
   }
-  .aboutcontent h2 {  
-font-size: 34.59px;
-font-weight: 700;
-line-height: 43.24px; 
-
+  .aboutcontent h2 {
+    font-size: 34.59px;
+    font-weight: 700;
+    line-height: 43.24px;
   }
-  
-  .aboutcontent p {  
-font-size: 12.58px;
-font-weight: 400;
-line-height: 18.26px; 
-margin-top: 40px;
 
+  .aboutcontent p {
+    font-size: 12.58px;
+    font-weight: 400;
+    line-height: 18.26px;
+    margin-top: 40px;
   }
 }
-
-
-
-
- 
